--- a/website/_includes/contact-me-form.html
+++ b/website/_includes/contact-me-form.html
@@ -1,62 +1,100 @@
-<div class="container mt-5">
+<div class="container mt-3">
   <form id="contactMeForm">
-    <div id="notification" class="alert mt-3" role="alert" style="display: none;"></div>
-    <div class="form-group">
-<!--      <label for="name">Name:</label>-->
-      <input type="text" class="form-control" id="name" name="user_name" placeholder="Name">
+    <div
+      id="notification"
+      class="alert mt-3"
+      role="alert"
+      style="display: none"
+    ></div>
+    <div class="mb-3">
+      <div class="form-group">
+        <!--      <label for="name">Name:</label>-->
+        <input
+          type="text"
+          class="form-control"
+          id="name"
+          name="user_name"
+          placeholder="Name"
+        />
+      </div>
     </div>
-    <div class="form-group">
-<!--      <label for="mail">E-mail:</label>-->
-      <input type="email" class="form-control" id="mail" name="user_email" placeholder="Email">
+    <div class="mb-3">
+      <div class="form-group">
+        <!--      <label for="mail">E-mail:</label>-->
+        <input
+          type="email"
+          class="form-control"
+          id="mail"
+          name="user_email"
+          placeholder="Email"
+        />
+      </div>
     </div>
-    <div class="form-group">
-<!--      <label for="msg">Message:</label>-->
-      <textarea class="form-control" id="msg" name="user_message" placeholder="Message"></textarea>
+    <div class="mb-3">
+      <div class="form-group">
+        <!--      <label for="msg">Message:</label>-->
+        <textarea
+          class="form-control"
+          id="msg"
+          name="user_message"
+          placeholder="Message"
+        ></textarea>
+      </div>
     </div>
-    <button type="button" class="btn btn-primary btn-block" id="contact_submit">Send your message</button>
+    <button type="button" class="btn btn-primary btn-block btn-lg" id="contact_submit">
+      Send your message
+    </button>
   </form>
-
 </div>
 
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script
+  src="https://code.jquery.com/jquery-3.6.0.js"
+  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+  crossorigin="anonymous"
+></script>
 
 <script>
   function submitContact(payload) {
     $.ajax({
-      url : "{{ site.contact.api.url }}",
+      url: "{{ site.contact.api.url }}",
       type: "POST",
       dataType: "json",
       data: payload,
-      success: function(data){
+      success: function (data) {
         console.log(data);
-        $('#notification').addClass('alert-success').text('Message Sent!').show();
+        $("#notification")
+          .addClass("alert-success")
+          .text("Message Sent!")
+          .show();
         clearForm();
       },
-      error: function(){
+      error: function () {
         console.log("Error in the request");
-        $('#notification').addClass('alert-danger').text('Something went wrong :(').show();
-      }
+        $("#notification")
+          .addClass("alert-danger")
+          .text("Something went wrong :(")
+          .show();
+      },
     });
   }
 
   function clearForm() {
-    $('#name').val('');
-    $('#mail').val('');
-    $('#msg').val('');
+    $("#name").val("");
+    $("#mail").val("");
+    $("#msg").val("");
   }
-
 
   function buildPayload() {
     var contactMePayload = {
-      contact_name : $('#name').val(),
-      contact_email : $('#mail').val(),
-      contact_message : $('#msg').val()
+      contact_name: $("#name").val(),
+      contact_email: $("#mail").val(),
+      contact_message: $("#msg").val(),
     };
 
     return JSON.stringify(contactMePayload);
   }
 
-  $('#contact_submit').click(function() {
+  $("#contact_submit").click(function () {
     var payload = buildPayload();
     console.log(payload);
     submitContact(payload);
